--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -12,8 +12,19 @@ path = "bin/main.rs"
 
 [dependencies]
 anyhow.workspace = true
+async-channel.workspace = true
 async-trait.workspace = true
 clap.workspace = true
+humantime-serde.workspace = true
+reqwest.workspace = true
+serde.workspace = true
+serde_yaml.workspace = true
+sui-storage.workspace = true
+sui-types.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+
+[dev-dependencies]
+mockito = "1.2"
+tempfile = "3.8"
