--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-default-members = ["crates/walrus-sui-archival"]
+default-members = ["crates/blob-bundle", "crates/walrus-sui-archival"]
 members = ["crates/*"]
 resolver = "2"
 
@@ -13,13 +13,18 @@ version = "0.1.0"
 anyhow = "1.0"
 async-channel = "2.3"
 async-trait = "0.1"
+blob-bundle = { path = "crates/blob-bundle" }
+bytes = "1.5"
 clap = { version = "4.5", features = ["derive"] }
+crc32fast = "1.3"
 humantime-serde = "1.1"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
 sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
+thiserror = "2.0.16"
 tokio = { version = "1.40", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+walrus-core = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.32.0" }
