--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -14,6 +14,7 @@ path = "bin/main.rs"
 anyhow.workspace = true
 async-channel.workspace = true
 async-trait.workspace = true
+blob-bundle.workspace = true
 clap.workspace = true
 humantime-serde.workspace = true
 reqwest.workspace = true
