--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -15,6 +15,7 @@ anyhow.workspace = true
 async-channel.workspace = true
 async-trait.workspace = true
 blob-bundle.workspace = true
+bytes.workspace = true
 clap.workspace = true
 humantime-serde.workspace = true
 reqwest.workspace = true
