--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,16 @@ version = "0.1.0"
 anyhow = "1.0"
 async-channel = "2.3"
 async-trait = "0.1"
+bincode = "1.3.3"
 blob-bundle = { path = "crates/blob-bundle" }
 bytes = "1.5"
 clap = { version = "4.5", features = ["derive"] }
 crc32fast = "1.3"
 humantime-serde = "1.1"
+prost = "0.13"
+prost-types = "0.13"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
+rocksdb = "0.22"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
