--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ tokio = { version = "1.40", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 walrus-core = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.32.0" }
+walrus-sdk = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.32.0" }
