--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -31,6 +31,7 @@ tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 walrus-core.workspace = true
+walrus-sdk.workspace = true
 
 [build-dependencies]
 prost-build = "0.13"
