--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bytes = "1.5"
 clap = { version = "4.5", features = ["derive"] }
 crc32fast = "1.3"
 humantime-serde = "1.1"
+mysten-metrics = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
 prost = "0.13"
 prost-types = "0.13"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
@@ -27,6 +28,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
 sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
+telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.55.0" }
 thiserror = "2.0.16"
 tokio = { version = "1.40", features = ["full"] }
 tracing = "0.1"
