--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -14,19 +14,25 @@ path = "bin/main.rs"
 anyhow.workspace = true
 async-channel.workspace = true
 async-trait.workspace = true
+axum = "0.7"
 bincode.workspace = true
 blob-bundle.workspace = true
 bytes.workspace = true
 clap.workspace = true
+git-version = "0.3.9"
 humantime-serde.workspace = true
+mysten-metrics.workspace = true
+prometheus = "0.13.4"
 prost.workspace = true
 prost-types.workspace = true
 reqwest.workspace = true
 rocksdb.workspace = true
 serde.workspace = true
+serde_json = "1.0.145"
 serde_yaml.workspace = true
 sui-storage.workspace = true
 sui-types.workspace = true
+telemetry-subscribers.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
