--- a/config/testnet_config.yaml
+++ b/config/testnet_config.yaml
@@ -10,7 +10,7 @@ checkpoint_downloader:
   downloaded_checkpoint_dir: /opt/walrus/data/downloaded_checkpoints
 checkpoint_monitor:
   max_accumulation_duration: 1h
-  max_accumulation_size_bytes: 3GB
+  max_accumulation_size_bytes: 3221225472 #3GB
 checkpoint_blob_publisher:
   store_epoch_length: 2
   checkpoint_blobs_dir: /opt/walrus/data/checkpoint_blobs
