--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"
 rocksdb = "0.22"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
+sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" } 
 sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" }
 sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" }
 telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.57.0" }
@@ -33,5 +34,5 @@ thiserror = "2.0.16"
 tokio = { version = "1.40", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-walrus-core = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.32.0" }
-walrus-sdk = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.32.0" }
+walrus-core = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.34.1" }
+walrus-sdk = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.34.1" }
