add get metadata object ID command

--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -16,6 +16,7 @@ arrow = "52.2"
 async-channel.workspace = true
 async-trait.workspace = true
 axum = "0.7"
+bcs.workspace = true
 bincode.workspace = true
 blob-bundle.workspace = true
 bytes.workspace = true
