--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.1.0"
 anyhow = "1.0"
 async-channel = "2.3"
 async-trait = "0.1"
+bcs = "0.1.6"
 bincode = "1.3.3"
 blob-bundle = { path = "crates/blob-bundle" }
 bytes = "1.5"
