--- a/config/testnet_local_config.yaml
+++ b/config/testnet_local_config.yaml
@@ -1,4 +1,5 @@
 # Configuration for walrus-sui-archival.
+context: testnet
 client_config_path: ./config/local_client_config.yaml
 thread_pool_size: 8
 rest_api_address: "0.0.0.0:9185"
