--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -35,11 +35,13 @@ rocksdb.workspace = true
 serde.workspace = true
 serde_json = "1.0.145"
 serde_yaml.workspace = true
+sui-indexer-alt-framework.workspace = true
 sui-sdk.workspace = true
 sui-storage.workspace = true
 sui-types.workspace = true
 telemetry-subscribers.workspace = true
 tokio.workspace = true
+tokio-util.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 walrus-core.workspace = true
