--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -17,6 +17,7 @@ async-channel.workspace = true
 async-trait.workspace = true
 axum = "0.8"
 bcs.workspace = true
+tower-http = { version = "0.6", features = ["cors"] }
 bincode.workspace = true
 blob-bundle.workspace = true
 bytes.workspace = true
