--- a/crates/blob-bundle/Cargo.toml
+++ b/crates/blob-bundle/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
+anyhow.workspace = true
 bytes = "1.5"
 crc32fast = "1.3"
 thiserror = "2.0.16"
+tokio.workspace = true
 walrus-core.workspace = true
 
 [dev-dependencies]
