add complete in memory blob building; this is used for faster bacfill, and shouldn't be used in normal operation

--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -26,6 +26,7 @@ clap.workspace = true
 const-str = "0.5"
 git-version = "0.3.9"
 humantime-serde.workspace = true
+in-memory-checkpoint-holder.workspace = true
 mysten-metrics.workspace = true
 parquet = "52.2"
 prometheus = "0.13.4"
