--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ bcs = "0.1.6"
 bincode = "1.3.3"
 blob-bundle = { path = "crates/blob-bundle" }
 bytes = "1.5"
+in-memory-checkpoint-holder = { path = "crates/in-memory-checkpoint-holder" }
 clap = { version = "4.5", features = ["derive"] }
 crc32fast = "1.3"
 humantime-serde = "1.1"
