--- a/crates/blob-bundle/Cargo.toml
+++ b/crates/blob-bundle/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 anyhow.workspace = true
 bytes = "1.5"
 crc32fast = "1.3"
+in-memory-checkpoint-holder.workspace = true
+sui-types.workspace = true
 thiserror = "2.0.16"
 tokio.workspace = true
 tracing.workspace = true
