--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-default-members = ["crates/blob-bundle", "crates/walrus-sui-archival"]
+default-members = ["crates/blob-bundle", "crates/walrus-sui-archival", "crates/website-front-end"]
 members = ["crates/*"]
 resolver = "2"
 
@@ -13,6 +13,7 @@ version = "0.1.0"
 anyhow = "1.0"
 async-channel = "2.3"
 async-trait = "0.1"
+axum = "0.8"
 bcs = "0.1.6"
 bincode = "1.3.3"
 blob-bundle = { path = "crates/blob-bundle" }
@@ -27,6 +28,7 @@ prost-types = "0.13"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 rocksdb = "0.22"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.145"
 serde_yaml = "0.9"
 sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.58.1" }
 sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.58.1" }
@@ -36,6 +38,7 @@ telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", tag = "test
 thiserror = "2.0.16"
 tokio = { version = "1.40", features = ["full"] }
 tokio-util = "0.7"
+tower-http = { version = "0.6", features = ["cors"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 walrus-core = { git = "https://github.com/MystenLabs/walrus.git", tag = "testnet-v1.35.0" }
