--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     hooks:
       - id: cargo-fmt
         name: cargo fmt
-        entry: cargo fmt --all -- --check --config group_imports=StdExternalCrate,imports_granularity=Crate,imports_layout=HorizontalVertical
+        entry: cargo fmt --all -- --config group_imports=StdExternalCrate,imports_granularity=Crate,imports_layout=HorizontalVertical
         language: system
         types: [rust]
         pass_filenames: false
