--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -48,6 +48,12 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 walrus-core.workspace = true
 walrus-sdk.workspace = true
+diesel.workspace = true
+diesel-async.workspace = true
+deadpool-diesel.workspace = true
+diesel_migrations.workspace = true
+dotenvy.workspace = true
+hex.workspace = true
 
 [build-dependencies]
 prost-build = "0.13"
