--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ humantime-serde = "1.1"
 mysten-metrics = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.62.0" }
 prost = "0.13"
 prost-types = "0.13"
+rand = "0.9.2"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 rocksdb = "0.22"
 serde = { version = "1.0", features = ["derive"] }
