--- a/crates/website-front-end/Cargo.toml
+++ b/crates/website-front-end/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 axum.workspace = true
 clap = { workspace = true, features = ["env"] }
 postgres-store.workspace = true
+rand.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
