pull pg as a dedicated crate and let front-end caching to use it

--- a/crates/walrus-sui-archival/Cargo.toml
+++ b/crates/walrus-sui-archival/Cargo.toml
@@ -48,11 +48,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 walrus-core.workspace = true
 walrus-sdk.workspace = true
-diesel.workspace = true
-diesel-async.workspace = true
-deadpool-diesel.workspace = true
-diesel_migrations.workspace = true
-dotenvy.workspace = true
+postgres-store.workspace = true
 hex.workspace = true
 
 [build-dependencies]
