--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bincode = "1.3.3"
 blob-bundle = { path = "crates/blob-bundle" }
 bytes = "1.5"
 in-memory-checkpoint-holder = { path = "crates/in-memory-checkpoint-holder" }
+postgres-store = { path = "crates/postgres-store" }
 clap = { version = "4.5", features = ["derive"] }
 crc32fast = "1.3"
 humantime-serde = "1.1"
