front-end server directly fetch checkpoints from aggregators instead of talking to the backend

--- a/crates/website-front-end/Cargo.toml
+++ b/crates/website-front-end/Cargo.toml
@@ -18,6 +18,8 @@ rand.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sui-storage.workspace = true
+sui-types.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
 tracing.workspace = true
