--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ blob-bundle = { path = "crates/blob-bundle" }
 bytes = "1.5"
 in-memory-checkpoint-holder = { path = "crates/in-memory-checkpoint-holder" }
 postgres-store = { path = "crates/postgres-store" }
+walrus-common = { path = "crates/walrus-common" }
 clap = { version = "4.5", features = ["derive"] }
 crc32fast = "1.3"
 humantime-serde = "1.1"
