--- a/crates/caching-server/Cargo.toml
+++ b/crates/caching-server/Cargo.toml
@@ -27,3 +27,4 @@ tokio.workspace = true
 tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+walrus-common.workspace = true
