Comment out pr_baseline in endorlabs-secrets.yml
Comment out the pr_baseline setting in the workflow.

--- a/.github/workflows/endorlabs-secrets.yml
+++ b/.github/workflows/endorlabs-secrets.yml
@@ -44,7 +44,7 @@ jobs:
           # https://docs.endorlabs.com/deployment/ci-scans/scan-with-github-actions/#pr-scanning
           pr: true
           enable_pr_comments: true
-          pr_baseline: main
+          # pr_baseline: main
 
           # SARIF output for GitHub Security tab
           sarif_file: endorlabs-secrets.sarif
