--- a/.github/workflows/endorlabs-secrets.yml
+++ b/.github/workflows/endorlabs-secrets.yml
@@ -28,7 +28,7 @@ jobs:
 
           # Authentication via GitHub Secrets
           # https://docs.endorlabs.com/deployment/ci-scans/scan-with-github-actions/#api-key-authentication
-          api_key: ${{ secrets.ENDOR_API_KEY }}
+          api_key: ${{ secrets.ENDOR_KEY_ID }}
           api_secret: ${{ secrets.ENDOR_API_SECRET }}
           enable_github_action_token: false
 
@@ -44,7 +44,7 @@ jobs:
           # https://docs.endorlabs.com/deployment/ci-scans/scan-with-github-actions/#pr-scanning
           pr: true
           enable_pr_comments: true
-          pr_baseline: main
+          # pr_baseline: main
 
           # SARIF output for GitHub Security tab
           sarif_file: endorlabs-secrets.sarif
