--- a/crates/walrus-common/Cargo.toml
+++ b/crates/walrus-common/Cargo.toml
@@ -7,7 +7,11 @@ edition.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+bcs.workspace = true
 reqwest.workspace = true
+serde.workspace = true
+sui-sdk.workspace = true
 sui-storage.workspace = true
 sui-types.workspace = true
 tracing.workspace = true
+walrus-core.workspace = true
